wuhu/qinglong/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose-linux-amd64 convert -f ./docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
    - name: "5700"
      port: 5700
      targetPort: 5700
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
